Dark mode fix

--- a/src/components/bridge/styles/bridge-selection.scss
+++ b/src/components/bridge/styles/bridge-selection.scss
@@ -126,4 +126,8 @@
       }
     }
   }
+  .button--bridge {
+    background-color: $navy-2;
+    border: 1px solid $astar-blue !important;
+  }
 }
